fixed post square sizing, no longer overflows, and only uses css to resize images

--- a/client/src/Components/Common/Navbar.css
+++ b/client/src/Components/Common/Navbar.css
@@ -39,6 +39,7 @@
     display: flex;
     margin-left: auto;
     font-size: 18px;
+    flex-wrap: wrap;
 }
 
 .navbar.right > a {
